# omp-MySQL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE.md  README.md
.github/workflows/: build.yml
cmake/: toolchain-clang-cl-win32.cmake  toolchain-linux-i386.cmake
docs/: modern-mysql8-features.md  natives.md
filterscripts/: mysql-admin.pwn  omp-admin.pwn
include/: omp-mysql.inc
scripts/: build-linux.sh  pre-commit
src/: Connection.cpp  Connection.hpp  HashJob.hpp  Hashing.cpp  Hashing.hpp  Model.cpp  Model.hpp  MySQLComponent.cpp  MySQLComponent.hpp  Query.hpp  QueryQueue.cpp  QueryQueue.hpp  Result.hpp  Statement.cpp  Statement.hpp  main.cpp  natives.cpp
testscripts/: README.md  connection_probe.cpp  feature_probe.cpp  feature_sweep.sh  test_mysql_versions.sh
tools/: least-privilege-user.sql  mysql.example.ini
